[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Pet.gd" type="Script" id=1]
[ext_resource path="res://Assets/shadow.png" type="Texture" id=2]
[ext_resource path="res://Assets/grape_body_sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/mouth_sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/eye_sheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/thought.png" type="Texture" id=6]
[ext_resource path="res://Assets/heart.png" type="Texture" id=7]
[ext_resource path="res://Assets/hat_grape.png" type="Texture" id=8]


[sub_resource type="Animation" id=1]
length = 3.0
loop = true
step = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Accessory:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -8 ), Vector2( 0, -9 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Accessory:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.001 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Accessory:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -9 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Accessory:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=5]
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 6, 7, 6, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Accessory:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Eyes Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 0 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Eyes Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face/Mouth Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=8]
length = 3.2
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Mouth Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 1, 5, 1, 5, 1, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face/Eyes Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 3.2
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Mouth Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 6, 0, 6, 0, 6, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face/Eyes Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Eyes Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face/Mouth Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Eyes Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face/Mouth Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Eyes Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Face/Mouth Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=14]
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Face:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -1, 0 ), Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "tongue"

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Face/Eyes Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 8, 0 ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 9, 9 )

[node name="Pet" type="Node2D"]
script = ExtResource( 1 )

[node name="Shadow Sprite" type="Sprite" parent="."]
position = Vector2( 0, 7 )
texture = ExtResource( 2 )

[node name="Body Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 3
hframes = 3

[node name="Face" type="Node2D" parent="."]

[node name="Mouth Sprite" type="Sprite" parent="Face"]
modulate = Color( 0.772549, 0.278431, 0.843137, 1 )
position = Vector2( -1, 0 )
texture = ExtResource( 4 )
hframes = 14

[node name="Eyes Sprite" type="Sprite" parent="Face"]
position = Vector2( -1, 0 )
texture = ExtResource( 5 )
hframes = 12

[node name="Accessory" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8 )
texture = ExtResource( 8 )

[node name="Thought" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -15 )
texture = ExtResource( 6 )

[node name="heart" type="Sprite" parent="Thought"]
position = Vector2( 0.5, -2 )
texture = ExtResource( 7 )

[node name="Body Animations" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/still = SubResource( 2 )
anims/still2 = SubResource( 3 )
anims/walk = SubResource( 4 )
anims/wave = SubResource( 5 )

[node name="Face Animations" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 6 )
anims/cry = SubResource( 7 )
anims/drink = SubResource( 8 )
anims/eat = SubResource( 9 )
anims/happy = SubResource( 10 )
anims/nod = SubResource( 11 )
anims/pleasure = SubResource( 12 )
anims/sad = SubResource( 13 )
anims/shake = SubResource( 14 )
anims/tongue = SubResource( 15 )
anims/wink = SubResource( 16 )

[node name="Timers" type="Node2D" parent="."]

[node name="Wander Timer" type="Timer" parent="Timers"]
wait_time = 8.0
autostart = true

[node name="Blink Timer" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="Behavior Timer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Response Timer" type="Timer" parent="Timers"]
wait_time = 15.0
one_shot = true

[node name="Food Timer" type="Timer" parent="Timers"]
wait_time = 15.0
autostart = true

[node name="Water Timer" type="Timer" parent="Timers"]
wait_time = 10.0
autostart = true

[node name="Sun Timer" type="Timer" parent="Timers"]
wait_time = 15.0
autostart = true

[node name="Health Timer" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="Age Timer" type="Timer" parent="Timers"]
autostart = true

[node name="Happy Timer" type="Timer" parent="Timers"]
wait_time = 10.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 17 )
[connection signal="animation_finished" from="Body Animations" to="." method="_body_anim_finished"]
[connection signal="animation_started" from="Body Animations" to="." method="_on_Body_Animations_animation_started"]
[connection signal="animation_finished" from="Face Animations" to="." method="_face_anim_finished"]
[connection signal="timeout" from="Timers/Wander Timer" to="." method="_on_Wander_Timer_timeout"]
[connection signal="timeout" from="Timers/Blink Timer" to="." method="_on_Blink_Timer_timeout"]
[connection signal="timeout" from="Timers/Behavior Timer" to="." method="_on_Behavior_Timer_timeout"]
[connection signal="timeout" from="Timers/Response Timer" to="." method="_on_Response_Timer_timeout"]
[connection signal="timeout" from="Timers/Food Timer" to="." method="_on_Food_Timer_timeout"]
[connection signal="timeout" from="Timers/Water Timer" to="." method="_on_Water_Timer_timeout"]
[connection signal="timeout" from="Timers/Sun Timer" to="." method="_on_Sun_Timer_timeout"]
[connection signal="timeout" from="Timers/Health Timer" to="." method="_on_Health_Timer_timeout"]
[connection signal="timeout" from="Timers/Age Timer" to="." method="_on_Age_Timer_timeout"]
[connection signal="timeout" from="Timers/Happy Timer" to="." method="_on_Happy_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
